# re2-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: matrix.yml
re2-rs/: Cargo.toml
re2-rs-icu/: Cargo.toml
re2-rs-icu/src/: lib.rs
re2-rs-icu/tests/: tests.rs
re2-rs-sys/: Cargo.toml  build.rs
re2-rs-sys/src/: bindings.rs  c-bindings.cc  c-bindings.h  lib.rs
re2-rs-wrapper/: Cargo.toml
re2-rs-wrapper/src/: lib.rs  regex.rs  wrapper.rs
re2-rs-wrapper/tests/: ffi.rs
re2-rs/src/: lib.rs
re2-rs/tests/: tests.rs
src/: c-bindings.cc  c-bindings.h  ffi.rs  lib.rs  re2_stub.rs  wrapper.rs
tests/: Cargo.toml  ffi.rs  wrapper.rs
tests/src/: ascii.rs  common.rs  main.rs  options.rs  unicode.rs  unicode_props.rs
xtask/src/: main.rs
