[package]
name = "re2-rs-sys"
version = "0.1.0"
edition = "2024"
links = "re2"
build = "build.rs"

[dependencies]
libc = "0.2"

[features]
default = ["no-bindgen"]
bindgen = ["dep:bindgen"]
no-bindgen = []
icu = []


[build-dependencies]
cc = "1.0"
glob = "0.3.3"
bindgen = { version = "0.72.1", optional = true }
pkg-config = "0.3.32"